--- a/pages/pk/findSomeOne/findSomeOne.wxml
+++ b/pages/pk/findSomeOne/findSomeOne.wxml
@@ -117,7 +117,7 @@
                 </block>
                 <view class="h-300"></view>
             </view>
-            <view wx:else class="ccc" style="height:100vh">
+            <view wx:else class="ccc" style="height:100vh ">
                 <image class="rcc w-400 h-400" src="{{emptyData}}" mode="aspectFit"></image>
                 <view class="rcc fs-30 fw-300 c-3">此处暂无打捞信息</view>
             </view>
@@ -135,7 +135,7 @@
 
 </view>
 
-<view hidden="{{!findUsers ||findUsers.length === 0}}" class="pageback z2 b-black"  style="width:100vw;height:100vh;background-position: center;background-image: url({{backUrl}});background-repeat: no-repeat;background-size: 100% 100%; "></view>
+<view class="pageback z2 b-black"  style="width:100vw;height:100vh;background-position: center;background-image: url({{backUrl}});background-repeat: no-repeat;background-size: 100% 100%; "></view>
 <!-- //头部 -->
 <view class="css customCenterBar z4" >
     <view class="rcs " style="height:{{top}}px"></view>
@@ -143,13 +143,13 @@
         <view class="rcs" style="flex:1">
             <view class="rcc h-32px" bindtap="back">
                 <view class="w-4vw"></view>
-                <image class="h-30 w-30" mode="aspectFit" src="{{findUsers.length>0?'/images/back1.png':'/images/back.png'}}"></image>
+                <image class="h-30 w-30" mode="aspectFit" src="/images/back1.png"></image>
                 <view class="w-4vw"></view>
             </view>
 
         </view>
         <view class="rcc">
-            <view class="rcc fs-35 fw-700 {{findUsers.length>0?'c-white':''}} ">捞人</view>
+            <view class="rcc fs-35 fw-700 c-white">捞人</view>
         </view>
         
         <view class="rcc" style="flex:1">
@@ -196,9 +196,9 @@
 
 <view class="ccc uploadButton z4">
     <view class="rcc  p-10">
-        <view class="rcc fs-25 fw-300 {{findUsers.length>0?'c-white':''}}">遇见不撩</view>
+        <view class="rcc fs-25 fw-300 c-white">遇见不撩</view>
         <image class="w-35 h-35 pl-10 pr-10" mode="aspectFit" src="/images/shank.png"></image>
-        <view class="rcc fs-25 fw-300 {{findUsers.length>0?'c-white':''}}">卡点互捞</view>
+        <view class="rcc fs-25 fw-300 c-white">卡点互捞</view>
     </view>
 
 
