--- a/pages/pk/timepage/timepage.wxml
+++ b/pages/pk/timepage/timepage.wxml
@@ -10,13 +10,13 @@
                 <!-- bottomBack -->
                 <view class="css">
                     <view class="rbc p-3vw">
-                        <view class="rus line-3-start fs-25 fw-300 c-white" style="flex:1">{{pk.sign}}</view>
+                        <view class="rus line-3-start fs-25 fw-300 c-white f-shadow4" style="flex:1">{{pk.sign}}</view>
                         <view style="flex:1"></view>
                     </view>
                     
                     <view class="rss">
                         <view class="rcc pl-3vw pr-3vw">
-                                <view class="rcc"  bindtap="goUser" data-userid="{{pk.user.userId}}"><image class="rcc br-10 border10-3" style="width:13vw;height:13vw" src="{{pk.user.imgUrl}}" mode="aspectFill"></image></view>
+                                <view class="rcc"  bindtap="goUser" data-userid="{{pk.user.userId}}"><image class="rcc br-20 border10-3" style="width:13vw;height:13vw" src="{{pk.user.imgUrl}}" mode="aspectFill"></image></view>
                         </view>
                         <view class="css" style="flex:1">
                                 <view class="csc" style="height:9vw">
